# pond-db

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  BLOCKERS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  OVERNIGHT_REPORT.md  README.md  RELEASE_CHECKLIST.md  REUSABLE_COMPONENTS.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  RESULTS.md  bench_analytical_queries.py  bench_concurrent_read.py  bench_concurrent_write.py  bench_isolation.py  bench_memory.py  bench_pondapi_latency.py  bench_session_lifecycle.py  helpers.py  run_all.py
docs/: api.md  configuration.md  security.md  setup.md
docs/integrations/: claude-agent-sdk.md  crewai.md  google-adk.md  langgraph.md  openai-agents-sdk.md  overview.md
examples/: benchmark_integrations.py
examples/claude-agent-sdk/: README.md  demo.py  requirements.txt  test_claude_integration.py
examples/claude-code-mcp/: README.md
examples/crewai/: README.md  demo.py  requirements.txt  test_crewai_integration.py
examples/google-adk/: README.md  demo.py  requirements.txt  test_adk_integration.py
examples/langgraph/: README.md  demo.py  requirements.txt  test_langgraph_integration.py
examples/langgraph-data-analyst/: .env.example  README.md  agents.py  generate_data.py  graph.py  ponddb_tools.py  requirements.txt  run.py
examples/langgraph-data-analyst/sample_data/: sales.csv
examples/multi-agent-team/: README.md  multi_agent_demo.py
examples/openai-agents-sdk/: README.md  demo.py  requirements.txt  test_openai_integration.py
examples/quickstart/: quickstart.py
nginx/: nginx.conf
scripts/: demo.py  demo_admin.py  demo_data.py  generate_demo_data.py  rotate_jwt_secret.sh  setup-secrets.sh
scripts/demo_data/: events.csv  users.csv
src/ponddb/: __init__.py  admin_routes.py  app.py  audit_log.py  brute_force.py  cli.py  client.py  compute_tracker.py  cors_middleware.py  dataset_manager.py  dataset_routes.py  exceptions.py  health_security.py  htmx_partials.py  invite_routes.py  invite_store.py  jwt_auth.py  metadata_store.py  namespace_routes.py  oauth_routes.py  oauth_state.py  pondapi_execute.py  pondapi_htmx.py  query_routes.py  query_store.py  rate_limit.py  result_cache.py  security_headers.py  session_manager.py  share_routes.py  sql_sandbox.py  subprocess_runner.py  token_blocklist.py  user_routes.py  user_store.py  website_routes.py
src/ponddb/api/: admin_routes.py  dataset_routes.py  htmx_partials.py  invite_routes.py  namespace_routes.py  oauth_routes.py  query_routes.py  share_routes.py  user_routes.py  website_routes.py
src/ponddb/auth/: brute_force.py  jwt_auth.py  oauth_state.py  token_blocklist.py
src/ponddb/engine/: compute_tracker.py  session_manager.py  subprocess_runner.py
src/ponddb/memory/: __init__.py  access.py  access_log.py  grants.py  models.py  routes.py  search.py  store.py  tasks.py
src/ponddb/pondapi/: executor.py  htmx.py  result_cache.py
src/ponddb/security/: audit_log.py  cors_middleware.py  health_security.py  rate_limit.py  security_headers.py  sql_sandbox.py
src/ponddb/static/: pond.css
src/ponddb/store/: dataset_manager.py  invite_store.py  metadata_store.py  query_store.py  user_store.py
src/ponddb/templates/: _macros.html  admin_home.html  admin_invites.html  base.html  (+13 more)
src/sdk/: pyproject.toml
src/sdk/duckcloud/: __init__.py  client.py  exceptions.py
tests/: conftest.py  stress_helpers.py  test_admin_console.py  test_app_health.py  test_audit_log.py  test_browser.py  test_brute_force.py  test_ci_coverage_badge.py  test_cloudflared.py  test_compute_tracker.py  test_cors_middleware.py  test_dashboard_ui.py  test_datasets.py  test_docker_ci_config.py  test_docker_compose.py  test_docker_production.py  test_docker_runtime_requirements.py  test_docker_security_hardening.py  test_dockerfile.py  test_endpoint_auth_and_validation.py  test_event_wiring.py  test_health_security.py  test_htmx_partials.py  test_integration.py  test_invite_api.py  test_jwt_auth.py  test_memory_concurrent.py  test_memory_edge_cases.py  test_memory_failure_modes.py  test_memory_isolation.py  test_memory_monitoring.py  test_memory_store.py  test_metadata_store.py  test_metrics_endpoint.py  test_namespace_workgroup_api.py  test_nginx_compose.py  test_nginx_config.py  test_nginx_routing.py  test_oauth_routes.py  test_oauth_state.py  (+47 more)
tools/mcp-server-ponddb/: README.md  pyproject.toml
tools/mcp-server-ponddb/mcp_server_ponddb/: __init__.py  __main__.py  client.py  ponddb_client.py  server.py
tools/mcp-server-ponddb/tests/: test_mcp_server.py  test_tools.py
(+7 files in other folders)
