[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ponddb"
version = "0.1.0"
description = "Lightweight self-hosted compute platform wrapping DuckDB with serverless session management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "DatabaseCompany" }]

dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "duckdb>=1.2,<2",
    "aiosqlite>=0.20,<1",
    "python-jose[cryptography]>=3.3,<4",
    "click>=8.1,<9",
    "httpx>=0.28,<1",
    "python-json-logger>=3.2,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5,<6",
    "ruff>=0.9,<1",
]

[project.scripts]
pond = "ponddb.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ponddb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
