[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ponddb"
version = "1.0.0"
description = "Lightweight self-hosted compute platform wrapping DuckDB with serverless session management"
readme = "README.md"
license = "BSL-1.1"
requires-python = ">=3.12"
authors = [{ name = "DatabaseCompany" }]

dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "duckdb>=1.2,<2",
    "aiosqlite>=0.20,<1",
    "python-jose[cryptography]>=3.3,<4",
    "click>=8.1,<9",
    "httpx>=0.28,<1",
    "python-json-logger>=3.2,<4",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5,<6",
    "ruff>=0.9,<1",
    "playwright>=1.40",
    "pytest-playwright>=0.5",
]

[project.scripts]
pond = "ponddb.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ponddb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Playwright browser tests need a live server; run separately with:
#   pytest tests/test_browser.py --base-url http://localhost:8432
markers = [
    "browser: marks tests that need a live PondDB server and Chromium (deselect: -m 'not browser')",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
ignore = ["E741"]  # Ambiguous variable names (l, I, O) — common in test list comprehensions

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F821", "F841", "E402", "E702"]  # Tests: undefined names (mocked), unused vars, late imports, inline statements
