[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-ponddb"
version = "0.1.0"
description = "MCP server for PondDB — give AI agents SQL access to your data"
readme = "README.md"
license = { text = "BSL-1.1" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
]

[project.scripts]
mcp-server-ponddb = "mcp_server_ponddb.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server_ponddb"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
