[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-ponddb"
version = "0.1.0"
description = "MCP server exposing PondDB agent memory operations as tools"
license = {text = "BSL-1.1"}
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
]

[project.scripts]
mcp-server-ponddb = "mcp_server_ponddb.server:main"
